Fix 'next game' icon issue on ie11
Fixes #180

--- a/src/components/Notifications/Notifications.styl
+++ b/src/components/Notifications/Notifications.styl
@@ -77,6 +77,7 @@ indiciator-size=1.5rem
     align-items: center;
     align-content: center;
     justify-content: center;
+    flex-basis: 3rem;
     cursor: pointer;
 
     .count {
